[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Exports/Puck.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Puck.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Components/ObjectAudioComponent.tscn" type="PackedScene" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 3.0

[sub_resource type="CircleShape2D" id=2]
radius = 21.0

[sub_resource type="CircleShape2D" id=3]
radius = 12.0

[node name="Puck" type="RigidBody2D" groups=["minimap_objects", "puck"]]
mode = 2
mass = 0.1
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 8
contact_monitor = true
script = ExtResource( 2 )

[node name="Puck" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="ObjectAudioComponent" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true

[connection signal="body_entered" from="." to="." method="_on_Puck_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
